chore: update dependencies for Tailwind CSS, Framer Motion, and Lucide React

--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Ajay Kumawat - Backend Developer | Node.js Expert</title>
+    <meta
+      name="description"
+      content="Backend Developer with 1.5+ years of experience in Node.js, Express, MongoDB, and building scalable APIs. View my portfolio of backend projects and get in touch."
+    />
+    <meta
+      name="keywords"
+      content="Backend Developer, Node.js, Express.js, MongoDB, API Development, TypeScript, JavaScript, Full Stack Developer"
+    />
+    <meta name="author" content="Ajay Kumawat" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Ajay Kumawat - Backend Developer | Node.js Expert"
+    />
+    <meta
+      property="og:description"
+      content="Backend Developer with 1.5+ years of experience in Node.js, Express, MongoDB, and building scalable APIs."
+    />
+    <meta property="og:url" content="https://your-portfolio-url.vercel.app" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:title"
+      content="Ajay Kumawat - Backend Developer | Node.js Expert"
+    />
+    <meta
+      property="twitter:description"
+      content="Backend Developer with 1.5+ years of experience in Node.js, Express, MongoDB, and building scalable APIs."
+    />
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+
+    <!-- Preload Critical Resources -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
     <div id="root"></div>
